# HandBrake

./: .gitignore  CMakeLists.txt  CMakePresets.json  meson.build  meson_options.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: flatpak.yml  linux.yml  mac.yml  snap.yml  windows-arm.yml  windows.yml
contrib/: CMakeLists.txt
contrib/amf/: CMakeLists.txt
contrib/cpuinfo/: module.defs
contrib/fdk-aac/: module.defs
contrib/ffmpeg/: CMakeLists.txt  P00-solaris-use-ginstall.patch  module.defs
contrib/freetype/: module.defs
contrib/fribidi/: module.defs
contrib/harfbuzz/: module.defs
contrib/jansson/: CMakeLists.txt  module.defs
contrib/libass/: CMakeLists.txt  module.defs
contrib/libbluray/: CMakeLists.txt  P01-dragonfly-Add-java-os-support.patch  P01-solaris-jni-md.patch  P03-haiku-configure.patch  module.defs
contrib/libdav1d/: CMakeLists.txt  P03-solaris-define-extensions.patch  module.defs
contrib/libdovi/: CMakeLists.txt  module.defs
contrib/libdvdnav/: CMakeLists.txt  module.defs
contrib/libdvdread/: CMakeLists.txt  P02-haiku-bswap-h.patch  module.defs
contrib/libgnurx/: CMakeLists.txt
contrib/libjpeg-turbo/: CMakeLists.txt  module.defs
contrib/libogg/: module.defs
contrib/libopus/: module.defs
contrib/libtheora/: CMakeLists.txt
contrib/libvorbis/: CMakeLists.txt  module.defs
contrib/libvpl/: A01-detect-libcpp.patch  CMakeLists.txt  module.defs
contrib/libvpx/: module.defs
contrib/svt-av1/: CMakeLists.txt  P00-solaris-remove-linker-flags.patch  P01-solaris-use-bsd-cpuinfo.patch  module.defs
contrib/vcpkg/libbluray/: portfile.cmake  vcpkg.json
contrib/vcpkg/zimg/: portfile.cmake  vcpkg.json
contrib/x264/: CMakeLists.txt  module.defs
contrib/x265/: CMakeLists.txt  P00-solaris-build-fix.patch  module.defs
contrib/x265_10bit/: module.defs
contrib/x265_12bit/: module.defs
contrib/x265_8bit/: module.defs
contrib/xz/: module.defs
contrib/zimg/: CMakeLists.txt  module.defs
contrib/zlib/: module.defs
gtk/: CMakeLists.txt  meson.build  module.defs
gtk/data/: CMakeLists.txt  fr.handbrake.ghb.gschema.xml  fr.handbrake.ghb.metainfo.xml.in.in  internal_defaults.json  meson.build  post_install.cmake.in  post_install.py
gtk/icons/: CMakeLists.txt  meson.build
gtk/po/: CMakeLists.txt  POTFILES.in  ghb.pot  meson.build
gtk/rust/: meson.build
gtk/rust/src/: lib.rs  paths.rs  server.rs  worker.rs
gtk/src/: CMakeLists.txt  application.c  application.h  callbacks.c  callbacks.h  chapters.c  common.h  config.h.in  ghb-button.c  ghb-button.h  ghb-chapter-row.c  ghb-chapter-row.h  ghb-file-button.c  ghb-queue-row.c  ghb-queue-row.h  ghb-string-list.c  hb-backend.c  hb-backend.h  main.c  meson.build  notifications.c  power-manager.c  power-manager.h  presets.c  presets.h  preview.c  queuehandler.c  queuehandler.h  server.c  server.h  settings.c  settings.h  subtitlehandler.c  title-add.c  util.c  values.c  worker.c
gtk/src/gui/: activity-window.c  button.c  chapter-row.c  file-button.c  ghb.ui  prefs-dialog.c  prefs-dialog.h  queue-row.c  string-list.c
gtk/src/model/: power-monitor.c  power-monitor.h  prefs.c  prefs.h
gtk/src/ui/: activity-window.c  activity-window.h  activity-window.ui  button.c  chapter-row.c  file-button.c  file-button.h  ghb.ui  prefs-dialog.c  prefs-dialog.ui  queue-row.c  queue-row.h  string-list.c  string-list.h  ui_res.gresource.xml
libhb/: CMakeLists.txt  encavcodec.c  libhandbrake.map  meson.build  module.defs  module.rules  ports.c  preset.c  rotate.c
libhb/handbrake/: meson.build  ports.h  project.h.in  qsv_common.h
libhb/platform/macosx/: CMakeLists.txt  meson.build
libhb/templates/: nlmeans_template.c
macosx/: Info.plist.in  meson.build  module.defs  module.rules
macosx/HandBrake.xcodeproj/: project.pbxproj
make/: CMakeLists.txt  configure.py  df-fetch.py
make/cmake/: GLibCompileResources.cmake  TargetPkgConfig.cmake  VersionInfo.cmake  cmake_uninstall.cmake
make/cross/: aarch64-w64-mingw32.meson  arm64-darwin-gcc.meson  x86_64-darwin-gcc.meson  x86_64-w64-mingw32.meson
make/include/: app.defs  app.rules  contrib.defs  gcc.defs  hb.defs  hb.rules  main.defs  main.rules
make/variant/: dragonfly.defs  solaris.defs
pkg/: appcast.xml.in
pkg/darwin/: appcast.cmake  appcast.xml.in  module.rules
pkg/linux/: module.defs  module.rules
pkg/linux/debian/: changelog  control  docs  handbrake-gtk.dirs  handbrake-gtk.install  rules
pkg/linux/flatpak/: fr.handbrake.ghb.Plugin.IntelMediaSDK.json  fr.handbrake.ghb.json
pkg/linux/snap/: snapcraft.yaml
pkg/linux/snap/gstreamer-plugin/: snapcraft.yaml
pkg/linux/snap/intel-media/: snapcraft.yaml
pkg/mingw/: module.rules
scripts/: create_flatpak_manifest.py  create_snapcraft_manifest.py
snap/: snapcraft.yaml
test/: CMakeLists.txt  meson.build  module.defs  module.rules
