if(ENABLE_VCN)
  # add_subdirectory(amf)
endif()
# add_subdirectory(bin2c)
# add_subdirectory(bzip2)
if(ENABLE_FDK_AAC)
  add_subdirectory(fdk-aac)
endif()
add_subdirectory(ffmpeg)
# add_subdirectory(freetype)
# add_subdirectory(fribidi)
# add_subdirectory(harfbuzz)
add_subdirectory(jansson)
# add_subdirectory(lame)
add_subdirectory(libass)
add_subdirectory(libbluray)
add_subdirectory(libdav1d)
if(ENABLE_LIBDOVI)
  add_subdirectory(libdovi)
endif()
add_subdirectory(libdvdnav)
add_subdirectory(libdvdread)
# add_subdirectory(libgnurx)
# add_subdirectory(libiconv)
add_subdirectory(libjpeg-turbo)
# add_subdirectory(libogg)
# add_subdirectory(libopus)
# add_subdirectory(libspeex)
add_subdirectory(libtheora)
add_subdirectory(libvorbis)
if(ENABLE_QSV)
  add_subdirectory(libvpl)
endif()
# add_subdirectory(libvpx)
if(ENABLE_NVENC)
  # add_subdirectory(nvenc)
endif()
if(ENABLE_MF)
  add_subdirectory(sse2neon)
endif()
add_subdirectory(svt-av1)
add_subdirectory(x264)
if(ENABLE_X265)
  add_subdirectory(x265)
endif()
# add_subdirectory(xz)
add_subdirectory(zimg)
# add_subdirectory(zlib)
